# solr

./: .travis.yml  solr.cabal
