name:
  solr
version:
  0.1
homepage:
  https://github.com/nikita-volkov/solr
bug-reports:
  https://github.com/nikita-volkov/solr/issues
author:
  Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer:
  Nikita Volkov <nikita.y.volkov@mail.ru>
copyright:
  (c) 2016, Sannsyn AS
license:
  MIT
license-file:
  LICENSE
build-type:
  Simple
cabal-version:
  >=1.10


source-repository head
  type:
    git
  location:
    git://github.com/nikita-volkov/solr.git


library
  hs-source-dirs:
    library
  default-extensions:
    Arrows, BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFunctor, DeriveGeneric, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, ImpredicativeTypes, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language:
    Haskell2010
  other-modules:
    Solr.Prelude
  exposed-modules:
  build-depends:
    -- networking:
    http-response-decoder >= 0.2 && < 0.3,
    -- json:
    json-stream >= 0.4.1 && < 0.5,
    -- data:
    bytestring >= 0.10 && < 0.11,
    text >= 1 && < 2,
    -- general:
    foldl >= 1.1 && < 2,
    transformers >= 0.3 && < 0.6,
    base-prelude < 2

